# serializer version: 1
# name: test_sensor_time_transitions[test_time0-last_second_2025-night][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-down',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'night',
  })
# ---
# name: test_sensor_time_transitions[test_time0-last_second_2025-night][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -63.829237944793036,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 346.5211507852694,
      <PlanetStateKey.DISTANCE: 'distance'>: 147109398494.25494,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 173.58677237792628,
      'icon': 'mdi:weather-moonset-down',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'descending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 12, 31, 23, 59, 59, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 12, 31, 22, 59, 59, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2026, 1, 1, 0, 25, 38, 726598, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2026, 9, 23, 2, 5, 9, 386932, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2026, 1, 1, 8, 14, 39, 434170, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2026, 1, 1, 16, 37, 16, 785348, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360142, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2026, 1, 1, 12, 25, 52, 832786, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2026, 12, 21, 21, 49, 59, 830144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'night',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 12, 31, 8, 14, 39, 623154, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 12, 31, 16, 36, 19, 95896, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:21:39',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 12, 31, 8, 14, 39, 623140, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 12, 31, 16, 36, 19, 71704, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_descending',
  })
# ---
# name: test_sensor_time_transitions[test_time1-first_second_2026-night][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-down',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'night',
  })
# ---
# name: test_sensor_time_transitions[test_time1-first_second_2026-night][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -63.82987998257502,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 346.52970218211027,
      <PlanetStateKey.DISTANCE: 'distance'>: 147109398494.25494,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 173.59093754966437,
      'icon': 'mdi:weather-moonset-down',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'descending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2026, 1, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 12, 31, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2026, 1, 1, 0, 25, 38, 726598, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2026, 9, 23, 2, 5, 9, 386932, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2026, 1, 1, 8, 14, 39, 434170, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2026, 1, 1, 16, 37, 16, 785348, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360142, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2026, 1, 1, 12, 25, 52, 832786, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2026, 12, 21, 21, 49, 59, 830144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'night',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 12, 31, 8, 14, 39, 623154, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 12, 31, 16, 36, 19, 95897, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:22:37',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2026, 1, 1, 8, 14, 39, 434170, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2026, 1, 1, 16, 37, 16, 798908, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_descending',
  })
# ---
# name: test_sensor_time_transitions[test_time10-dst_spring_jump-night][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-up',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'night',
  })
# ---
# name: test_sensor_time_transitions[test_time10-dst_spring_jump-night][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -33.80591884414056,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 28.03682175980409,
      <PlanetStateKey.DISTANCE: 'distance'>: 149402254823.31873,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 203.04323304195015,
      'icon': 'mdi:weather-moonset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 3, 30, 1, 59, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 3, 30, 0, 59, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 3, 31, 1, 26, 32, 739184, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2025, 9, 22, 20, 19, 17, 404261, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 3, 30, 7, 3, 45, 308158, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 3, 30, 19, 50, 35, 9332, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2025, 6, 21, 4, 42, 18, 795909, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 3, 30, 13, 26, 41, 669368, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2025, 12, 21, 16, 2, 51, 231129, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'night',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 3, 29, 6, 5, 50, 383462, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 3, 29, 18, 49, 5, 689609, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '12:46:49',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 3, 30, 7, 3, 45, 293462, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 3, 30, 19, 50, 35, 25292, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time11-just_before_earliest_sunrise-morning_twilight][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-up',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'morning_twilight',
  })
# ---
# name: test_sensor_time_transitions[test_time11-just_before_earliest_sunrise-morning_twilight][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -0.11245973169492107,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 52.095143705440385,
      <PlanetStateKey.DISTANCE: 'distance'>: 151959536718.27197,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 239.24483703112418,
      'icon': 'mdi:weather-moonset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 6, 16, 5, 20, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 6, 16, 3, 20, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 6, 17, 1, 23, 11, 701812, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2025, 9, 22, 20, 19, 17, 404261, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 6, 17, 5, 18, 35, 497306, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 6, 16, 21, 27, 44, 342398, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2025, 6, 21, 4, 42, 18, 795909, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 6, 16, 13, 23, 5, 218148, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2025, 12, 21, 16, 2, 51, 231129, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'morning_twilight',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 6, 16, 5, 18, 34, 309756, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 6, 15, 21, 27, 18, 794312, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '16:09:10',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 6, 16, 5, 18, 34, 309886, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 6, 16, 21, 27, 44, 342390, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time12-just_after_earliest_sunrise-morning_small_day][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-sunset-up',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'morning_small_day',
  })
# ---
# name: test_sensor_time_transitions[test_time12-just_after_earliest_sunrise-morning_small_day][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: 0.10254127649375103,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 52.4726448457724,
      <PlanetStateKey.DISTANCE: 'distance'>: 151959518884.81616,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 239.74475465125482,
      'icon': 'mdi:weather-sunset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'above_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 6, 16, 5, 22, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 6, 16, 3, 22, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 6, 17, 1, 23, 11, 701812, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2025, 9, 22, 20, 19, 17, 404261, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 6, 17, 5, 18, 35, 497306, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 6, 16, 21, 27, 44, 342410, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2025, 6, 21, 4, 42, 18, 795909, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 6, 16, 13, 23, 5, 218148, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2025, 12, 21, 16, 2, 51, 231129, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'morning_small_day',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 6, 16, 5, 18, 34, 309538, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 6, 15, 21, 27, 18, 794324, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '16:09:10',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 6, 16, 5, 18, 34, 309886, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 6, 16, 21, 27, 44, 342390, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'above_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time13-just_before_earliest_sunset-evening_small_day][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-sunset-down',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'evening_small_day',
  })
# ---
# name: test_sensor_time_transitions[test_time13-just_before_earliest_sunset-evening_small_day][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: 0.0053050050935535935,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 234.39165638884094,
      <PlanetStateKey.DISTANCE: 'distance'>: 147305406006.96384,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 62.0701918933304,
      'icon': 'mdi:weather-sunset-down',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'descending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'above_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 12, 11, 16, 24, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 12, 11, 15, 24, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 12, 12, 0, 15, 52, 650508, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2026, 9, 23, 2, 5, 9, 386932, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 12, 12, 8, 5, 31, 494070, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 12, 11, 16, 26, 31, 453990, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 12, 12, 12, 16, 6, 645754, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2025, 12, 21, 16, 2, 51, 231129, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'evening_small_day',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 12, 11, 8, 4, 36, 178002, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 12, 10, 16, 26, 33, 125022, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:21:55',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 12, 11, 8, 4, 36, 152791, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 12, 11, 16, 26, 31, 453775, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'above_horizon_descending',
  })
# ---
# name: test_sensor_time_transitions[test_time14-just_after_earliest_sunset-evening_twilight][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-down',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'evening_twilight',
  })
# ---
# name: test_sensor_time_transitions[test_time14-just_after_earliest_sunset-evening_twilight][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -0.2139366659468071,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 234.76477596282038,
      <PlanetStateKey.DISTANCE: 'distance'>: 147305414923.69174,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 62.570038450667525,
      'icon': 'mdi:weather-moonset-down',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'descending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 12, 11, 16, 26, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 12, 11, 15, 26, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 12, 12, 0, 15, 52, 650508, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2026, 9, 23, 2, 5, 9, 386932, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 12, 12, 8, 5, 31, 494116, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 12, 11, 16, 26, 31, 453822, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360142, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 12, 12, 12, 16, 6, 645754, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2025, 12, 21, 16, 2, 51, 231129, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'evening_twilight',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 12, 11, 8, 4, 36, 178050, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 12, 10, 16, 26, 33, 125022, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:21:55',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 12, 11, 8, 4, 36, 152791, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 12, 11, 16, 26, 31, 453775, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_descending',
  })
# ---
# name: test_sensor_time_transitions[test_time15-year_overflow_last_sec-night][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-down',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'night',
  })
# ---
# name: test_sensor_time_transitions[test_time15-year_overflow_last_sec-night][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -63.829237944793036,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 346.5211507852694,
      <PlanetStateKey.DISTANCE: 'distance'>: 147109398494.25494,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 173.58677237792628,
      'icon': 'mdi:weather-moonset-down',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'descending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 12, 31, 23, 59, 59, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 12, 31, 22, 59, 59, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2026, 1, 1, 0, 25, 38, 726598, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2026, 9, 23, 2, 5, 9, 386932, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2026, 1, 1, 8, 14, 39, 434170, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2026, 1, 1, 16, 37, 16, 785348, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360142, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2026, 1, 1, 12, 25, 52, 832786, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2026, 12, 21, 21, 49, 59, 830144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'night',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 12, 31, 8, 14, 39, 623154, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 12, 31, 16, 36, 19, 95896, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:21:39',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 12, 31, 8, 14, 39, 623140, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 12, 31, 16, 36, 19, 71704, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_descending',
  })
# ---
# name: test_sensor_time_transitions[test_time2-first_hour_2026_to_check_localtime-night][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-up',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'night',
  })
# ---
# name: test_sensor_time_transitions[test_time2-first_hour_2026_to_check_localtime-night][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -63.43812765253977,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 17.894774606542416,
      <PlanetStateKey.DISTANCE: 'distance'>: 147109264743.33643,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 188.5855619045737,
      'icon': 'mdi:weather-moonset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2026, 1, 1, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2026, 1, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2026, 1, 2, 0, 26, 6, 855466, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2026, 9, 23, 2, 5, 9, 386932, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2026, 1, 1, 8, 14, 39, 434170, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2026, 1, 1, 16, 37, 16, 787052, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2026, 1, 1, 12, 25, 52, 832786, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2026, 12, 21, 21, 49, 59, 830144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'night',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 12, 31, 8, 14, 39, 623156, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 12, 31, 16, 36, 19, 97532, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:22:37',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2026, 1, 1, 8, 14, 39, 434170, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2026, 1, 1, 16, 37, 16, 798908, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time3-midday_new_year-day][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-sunset-up',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'day',
  })
# ---
# name: test_sensor_time_transitions[test_time3-midday_new_year-day][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: 18.139179265612984,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 173.7362980683261,
      <PlanetStateKey.DISTANCE: 'distance'>: 147100437182.71494,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 353.5317684331415,
      'icon': 'mdi:weather-sunset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'above_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2026, 1, 1, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2026, 1, 1, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2026, 1, 2, 0, 26, 6, 855466, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2026, 9, 23, 2, 5, 9, 386932, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2026, 1, 2, 8, 14, 36, 246928, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2026, 1, 1, 16, 37, 16, 804812, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2026, 1, 1, 12, 25, 52, 832786, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2026, 12, 21, 21, 49, 59, 830144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'day',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2026, 1, 1, 8, 14, 39, 434174, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 12, 31, 16, 36, 19, 114588, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:22:37',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2026, 1, 1, 8, 14, 39, 434170, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2026, 1, 1, 16, 37, 16, 798908, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'above_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time4-dst_spring-night][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-up',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'night',
  })
# ---
# name: test_sensor_time_transitions[test_time4-dst_spring-night][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -33.80591884414056,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 28.03682175980409,
      <PlanetStateKey.DISTANCE: 'distance'>: 149402254823.31873,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 203.04323304195015,
      'icon': 'mdi:weather-moonset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 3, 30, 1, 59, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 3, 30, 0, 59, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 3, 31, 1, 26, 32, 739184, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2025, 9, 22, 20, 19, 17, 404261, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 3, 30, 7, 3, 45, 308158, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 3, 30, 19, 50, 35, 9332, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2025, 6, 21, 4, 42, 18, 795909, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 3, 30, 13, 26, 41, 669368, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2025, 12, 21, 16, 2, 51, 231129, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'night',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 3, 29, 6, 5, 50, 383462, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 3, 29, 18, 49, 5, 689609, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '12:46:49',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 3, 30, 7, 3, 45, 293462, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 3, 30, 19, 50, 35, 25292, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time5-dst_autumn-night][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-up',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'night',
  })
# ---
# name: test_sensor_time_transitions[test_time5-dst_autumn-night][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -49.831605354119816,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 32.71500102990613,
      <PlanetStateKey.DISTANCE: 'distance'>: 148739046435.53494,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 200.91783252300397,
      'icon': 'mdi:weather-moonset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 10, 26, 2, 30, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 10, 26, 0, 30, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 10, 27, 0, 6, 14, 22310, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2026, 9, 23, 2, 5, 9, 386932, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 10, 26, 6, 59, 16, 579723, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 10, 26, 17, 12, 34, 675363, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 10, 26, 12, 6, 16, 891304, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2025, 12, 21, 16, 2, 51, 231130, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'night',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 10, 25, 7, 57, 42, 958533, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 10, 25, 18, 14, 20, 633944, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '10:13:18',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 10, 26, 6, 59, 16, 568848, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 10, 26, 17, 12, 34, 704738, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time6-just_before_sunset_summer-evening_small_day][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-sunset-down',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'evening_small_day',
  })
# ---
# name: test_sensor_time_transitions[test_time6-just_before_sunset_summer-evening_small_day][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: 0.18909562812122774,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 307.52492337951196,
      <PlanetStateKey.DISTANCE: 'distance'>: 152029354697.7329,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 120.18871066574229,
      'icon': 'mdi:weather-sunset-down',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'descending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'above_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 6, 21, 21, 25, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 6, 21, 19, 25, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 6, 22, 1, 24, 17, 250872, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2025, 9, 22, 20, 19, 17, 404261, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 6, 22, 5, 19, 21, 645108, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 6, 21, 21, 29, 13, 566837, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 6, 22, 13, 24, 23, 810862, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2025, 12, 21, 16, 2, 51, 231129, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'evening_small_day',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 6, 21, 5, 19, 7, 114195, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 6, 20, 21, 29, 0, 987912, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '16:10:06',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 6, 21, 5, 19, 7, 112352, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 6, 21, 21, 29, 13, 599000, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'above_horizon_descending',
  })
# ---
# name: test_sensor_time_transitions[test_time7-just_after_sunset_summer-evening_twilight][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-down',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'evening_twilight',
  })
# ---
# name: test_sensor_time_transitions[test_time7-just_after_sunset_summer-evening_twilight][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -0.02769758435305869,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 307.9020864254801,
      <PlanetStateKey.DISTANCE: 'distance'>: 152029390364.64453,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 120.68862700392884,
      'icon': 'mdi:weather-moonset-down',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'descending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 6, 21, 21, 27, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 6, 21, 19, 27, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 6, 22, 1, 24, 17, 250872, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2025, 9, 22, 20, 19, 17, 404261, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 6, 22, 5, 19, 21, 645113, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 6, 21, 21, 29, 13, 582507, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 6, 22, 13, 24, 23, 810862, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2025, 12, 21, 16, 2, 51, 231129, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'evening_twilight',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 6, 21, 5, 19, 7, 114199, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 6, 20, 21, 29, 0, 987914, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '16:10:06',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 6, 21, 5, 19, 7, 112352, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 6, 21, 21, 29, 13, 599000, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_descending',
  })
# ---
# name: test_sensor_time_transitions[test_time8-before_civil_dawn_winter-morning_nautical_twilight][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-up',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'morning_nautical_twilight',
  })
# ---
# name: test_sensor_time_transitions[test_time8-before_civil_dawn_winter-morning_nautical_twilight][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -6.204548537794637,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 118.69654369847733,
      <PlanetStateKey.DISTANCE: 'distance'>: 147178895471.51147,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 288.1488963342952,
      'icon': 'mdi:weather-moonset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 12, 21, 7, 33, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 12, 21, 6, 33, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 12, 22, 0, 20, 44, 785416, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2026, 9, 23, 2, 5, 9, 386934, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 12, 21, 8, 11, 57, 355252, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 12, 21, 16, 29, 2, 146502, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360142, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 12, 21, 12, 20, 29, 825772, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2025, 12, 21, 16, 2, 51, 231130, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'morning_nautical_twilight',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 12, 20, 8, 11, 25, 140754, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 12, 20, 16, 28, 33, 622499, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:17:04',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 12, 21, 8, 11, 57, 351470, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 12, 21, 16, 29, 2, 146751, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time9-after_civil_dawn_winter-morning_twilight][sensor.planet_phase_sun_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_sun phase',
      'icon': 'mdi:weather-moonset-up',
      'options': list([
        'night',
        'morning_astronomical_twilight',
        'morning_nautical_twilight',
        'morning_twilight',
        'morning_small_day',
        'day',
        'evening_small_day',
        'evening_twilight',
        'evening_nautical_twilight',
        'evening_astronomical_twilight',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'morning_twilight',
  })
# ---
# name: test_sensor_time_transitions[test_time9-after_civil_dawn_winter-morning_twilight][sun_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -5.8696344807112935,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 119.05477346006616,
      <PlanetStateKey.DISTANCE: 'distance'>: 147178850887.87198,
      'elevation': 295,
      'friendly_name': 'planet_phase_sun main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 288.6487282664636,
      'icon': 'mdi:weather-moonset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 100.0,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 12, 21, 7, 35, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 12, 21, 6, 35, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 12, 22, 0, 20, 44, 785416, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_AUTUMNAL_EQUINOX: 'next_autumnal_equinox'>: HAFakeDatetime(2026, 9, 23, 2, 5, 9, 386934, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 12, 21, 8, 11, 57, 355268, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 12, 21, 16, 29, 2, 146514, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SUMMER_SOLSTICE: 'next_summer_solstice'>: HAFakeDatetime(2026, 6, 21, 10, 24, 31, 360144, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 12, 21, 12, 20, 29, 825772, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_VERNAL_EQUINOX: 'next_vernal_equinox'>: HAFakeDatetime(2026, 3, 20, 15, 45, 53, 449300, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_WINTER_SOLSTICE: 'next_winter_solstice'>: HAFakeDatetime(2025, 12, 21, 16, 2, 51, 231130, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'morning_twilight',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'sun',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 12, 20, 8, 11, 25, 140770, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 12, 20, 16, 28, 33, 622511, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:17:04',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 12, 21, 8, 11, 57, 351470, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 12, 21, 16, 29, 2, 146751, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_sun_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_ascending',
  })
# ---
